# RP2040_CSDK_LVGL_Examples

./: CMakeLists.txt  README.md  pico_openocd.cfg
User/: drv_RM68042.c  drv_RM68042.h  drv_clock_oc.c  drv_repeating_tmr.c  main.c  main.h  syscall.c
middlewares/lvgl-8.3.3/: lv_conf.h
middlewares/lvgl-8.3.3/examples/porting/: lv_port_disp.c
middlewares/lvgl_userapp/: ui.c  ui.h
